登录页面的开发

--- a/xiaomimall/src/assets/scss/mixin.scss
+++ b/xiaomimall/src/assets/scss/mixin.scss
@@ -20,3 +20,12 @@
     width: $w;
     height: $h;
 }
+
+// 全屏固定定位
+@mixin positionFiex {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
