产品栈组件的开发及吸顶功能的实现

--- a/xiaomimall/src/assets/scss/base.scss
+++ b/xiaomimall/src/assets/scss/base.scss
@@ -29,3 +29,14 @@
       }
     }
   }
+
+  // 常用按钮样式
+  .btn {
+    width: 110px;
+    height: 30px;
+    @include flexFun(center, center);
+    background-color: #FF7301;
+    color: #fff;
+    font-size: 12px;
+    cursor: pointer;
+  }
